GNOME Bugzilla – Bug 773663
Wrong GIO annotation on g_dbus_proxy_get_interface_info
Last modified: 2018-02-12 11:34:08 UTC
See this snippet from Gio-2.0.gir: <method name="get_interface_info" c:identifier="g_dbus_proxy_get_interface_info" version="2.26"> <doc xml:space="preserve">Returns the #GDBusInterfaceInfo, if any, specifying the interface that @proxy conforms to. See the #GDBusProxy:g-interface-info property for more details.</doc> <return-value transfer-ownership="full"> <doc xml:space="preserve">A #GDBusInterfaceInfo or %NULL. Do not unref the returned object, it is owned by @proxy.</doc> <type name="DBusInterfaceInfo" c:type="GDBusInterfaceInfo*"/> </return-value> Doc string implies that ownership transfer is none, while the actual attribute does transfer-ownership="full". This causes a double-free with language bindings. Long version here: https://github.com/pavouk/lgi/issues/88#issuecomment-255613940
Created attachment 368177 [details] [review] gdbusproxy: Add some missing (transfer) and (nullable) annotations Signed-off-by: Philip Withnall <withnall@endlessm.com>
Rico, would you mind reviewing this please?
Review of attachment 368177 [details] [review]: Looks good
Thanks for the review. Pushed to master. Attachment 368177 [details] pushed as f8ee429 - gdbusproxy: Add some missing (transfer) and (nullable) annotations