gdbusproxy: Add some missing (transfer) and (nullable) annotations

Signed-off-by: Philip Withnall <withnall@endlessm.com>

https://bugzilla.gnome.org/show_bug.cgi?id=773663